DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-09-2007 patrick     Added vrjuggler-direct3d fpc file.
Sep-07-2007 dshipton    Added vrjuggler-opengl and vrjuggler-performer fpc
                        files for easier Draw Manager selection by application
                        builds.
Sep-07-2007 patrick     Set VJ_BASE_DIR automatically on all platforms. Use the
                        new environment variable VJ_DATA_DIR as a way to look
                        up files in VJ_BASE_DIR/share/vrjuggler.
Aug-25-2007 patrick     Changed the return type of the virtual method
                        vrj::OsgApp::getSceneViewDefaults() from
                        osgUtil::SceneView::Options to unsigned int to fix
                        compile errors.

[2.2.0 released - 8.14.2007]===================================================
Aug-09-2007 patrick     Stability improvements for vrj::OsgApp when using
                        multi-pipe/multi-threaded configurations.

[2.2 beta 1 released - 7.9.2007]===============================================
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory. On non-Windows platforms, debug-enabled
                        plug-ins no longer use the "_d" name variation and are
                        installed in the "debug" subdirectory.
                        NEW VERSION: 2.1.31
Jun-27-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for VJ_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and VJ_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 2.1.30