@@ -197,6 +197,9 @@
 				RelativePath="..\..\modules\vrjuggler\vrj\Display\CameraProjection.cpp">
 			</File>
 			<File
+				RelativePath="..\..\modules\vrjuggler\vrj\Draw\CpuAffinityFromEnv.cpp">
+			</File>
+			<File
 				RelativePath="..\..\modules\vrjuggler\vrj\Display\Display.cpp">
 			</File>
 			<File
@@ -271,6 +274,9 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\vrjuggler\vrj\Display\CameraProjection.h">
+			</File>
+			<File
+				RelativePath="..\..\modules\vrjuggler\vrj\Draw\CpuAffinityFromEnv.h">
 			</File>
 			<File
 				RelativePath="..\..\modules\vrjuggler\vrj\Util\Debug.h">
