@@ -564,6 +564,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\modules\vrjuggler\vrj\Draw\CpuAffinityFromEnv.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\modules\vrjuggler\vrj\Display\Display.cpp"
 				>
 			</File>
@@ -662,6 +666,10 @@
 			</File>
 			<File
 				RelativePath="..\..\modules\vrjuggler\vrj\Display\CameraProjection.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\modules\vrjuggler\vrj\Draw\CpuAffinityFromEnv.h"
 				>
 			</File>
 			<File
